[metadata]
name = taskflow
summary = Taskflow structured state management library.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/taskflow/latest/
keywords = reliable,tasks,execution,parallel,dataflow,workflows,distributed
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: System :: Distributed Computing

[files]
packages =
    taskflow

[entry_points]
taskflow.jobboards =
    zookeeper = taskflow.jobs.backends.impl_zookeeper:ZookeeperJobBoard
    redis = taskflow.jobs.backends.impl_redis:RedisJobBoard
    etcd = taskflow.jobs.backends.impl_etcd:EtcdJobBoard

taskflow.conductors =
    blocking = taskflow.conductors.backends.impl_blocking:BlockingConductor
    nonblocking = taskflow.conductors.backends.impl_nonblocking:NonBlockingConductor

taskflow.persistence =
    dir = taskflow.persistence.backends.impl_dir:DirBackend
    file = taskflow.persistence.backends.impl_dir:DirBackend
    memory = taskflow.persistence.backends.impl_memory:MemoryBackend
    mysql = taskflow.persistence.backends.impl_sqlalchemy:SQLAlchemyBackend
    postgresql = taskflow.persistence.backends.impl_sqlalchemy:SQLAlchemyBackend
    sqlite = taskflow.persistence.backends.impl_sqlalchemy:SQLAlchemyBackend
    zookeeper = taskflow.persistence.backends.impl_zookeeper:ZkBackend

taskflow.engines =
    default = taskflow.engines.action_engine.engine:SerialActionEngine
    serial = taskflow.engines.action_engine.engine:SerialActionEngine
    parallel = taskflow.engines.action_engine.engine:ParallelActionEngine
    worker-based = taskflow.engines.worker_based.engine:WorkerBasedActionEngine
    workers = taskflow.engines.worker_based.engine:WorkerBasedActionEngine

[extras]
# NOTE(dhellmann): The entries in this section of the file need to be
# kept consistent with the entries in test-requirements.txt.
zookeeper =
  kazoo>=2.6.0 # Apache-2.0
  zake>=0.1.6 # Apache-2.0
redis =
  redis>=4.0.0 # MIT
etcd =
  etcd3gw>=2.0.0 # Apache-2.0
workers =
  kombu>=4.3.0 # BSD
eventlet =
  eventlet>=0.18.2 # MIT
database =
  SQLAlchemy>=1.0.10 # MIT
  alembic>=0.8.10 # MIT
  SQLAlchemy-Utils>=0.30.11 # BSD License
  PyMySQL>=0.7.6 # MIT License
  psycopg2>=2.8.0 # LGPL/ZPL
test =
  pydotplus>=2.0.2 # MIT License
  hacking<0.11,>=0.10.0
  oslotest>=3.2.0 # Apache-2.0
  mock>=2.0.0 # BSD
  testtools>=2.2.0 # MIT
  testscenarios>=0.4 # Apache-2.0/BSD
  stestr>=2.0.0 # Apache-2.0
